<resources>
    <string name="app_name">Chemplexity</string>
    <string name="startButton">START</string>
    <string name="instructions">How to play</string>
    <string name="textTwo">Tap a button to place or remove one of the following symbols:</string>
    <string name="titleOne">Chem</string>
    <string name="titleTwo">plexity</string>
    <string name="backButton">BACK</string>
    <string name="instructionsTitle">Instructions:</string>
    <string name="startInstruct">The \"Start\" instruction is where your walkers will start.</string>
</resources>
